--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -8,15 +8,15 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 
-{% block title %}Log In{% endblock title %}
+{% block title %}Enter new password{% endblock title %}
 
 {% block content %}
-<h2>Log In</h2>
-<form method="post">{% csrf_token %}
+<h1>Set a new password!</h1>
+<form method="POST">{% csrf_token %}
   {{ form|crispy }}
-  <button class="btn btn-success ms-2" type="submit">Log In</button>
+  <input class="btn btn-success" type="submit" value="Change my password">
 </form>
-<p><a href ="{% url 'password_reset' %}">Forgot your password?</a></p>
 {% endblock content %}
+
 </body>
 </html>
