--- a/templates/home.html
+++ b/templates/home.html
@@ -11,11 +11,14 @@
 
 {% block content %}
 {% if user.is_authenticated %}
-<p>Hi {{ user.username }}! You are {{user.age }} years old.</p>
+Hi {{ user.username }}! You are {{user.age }} years old.
 <form action="{% url 'logout' %}" method="post">
   {% csrf_token %}
   <button type="submit">Log Out</button>
 </form>
+<br/>
+<p><a class="btn btn-primary" href="{% url 'article_list' %}" role="button">
+    View all articles</a></p>
 {% else %}
 <p>You are not logged in.</p>
 <a href="{% url 'login' %}">Log In</a> |
